exported_metadata/main/default/objects/Approval_Config_Record__c/Approval_Config_Record__c.object-meta.xml
<CustomObject>
    <label>Approval Config</label>
    <nameField>
        <label>Auto Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>