exported_metadata/main/default/objects/Approval_Config_Record__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <description>This is the approval type field for the Approval Config Record custom object.</description>
    <label>Approvals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Approval</fullName>
            </value>
            <value>
                <fullName>Invoice Approval</fullName>
            </value>
            <value>
                <fullName>Leave Request Approval</fullName>
            </value>
            <value>
                <fullName>Purchase Order Approval</fullName>
            </value>
            <value>
                <fullName>Expense Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>