exported_metadata/main/default/objects/Approval_Config_Record__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <description>Config Name for the approval process.</description>
    <label>Config Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>