exported_metadata/main/default/objects/Approval_Config_Record__c/fields/Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved__c</fullName>
    <description>This is the decision field for the Approval Config Record custom object.</description>    
    <defaultValue>false</defaultValue>
    <label>Is Approved</label>  
    <type>Checkbox</type>
</CustomField>